# PeopleFinder

./: CMakeLists.txt
include/: Image.h  ImageAnalyser.h  PeopleFinder.h  Vector2D.h  Vector3D.h
src/: main.cpp
src/peopleFinder/: Image.cpp  ImageAnalyser.cpp  PeopleFinder.cpp  Vector2D.cpp  Vector3D.cpp
tests/: main.cpp
